style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

.nav-area {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.logo {
    font-size: 2.5rem;
    color: #333;
    margin-left: 1.2rem;
    padding: 10px;
}

.nav-container {
    width: 100%;
    margin-top: 10px;
    /* height: 100vh; */
    display: flex;
    align-items: center;
    justify-content: center;
}

nav {
    background: #fff;
    border-radius: 30px;
    padding: 20px;
    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.4);
}

nav ul li {
    display: inline-block;
    list-style: none;
    font-size: 1.5rem;
    padding: 0 10px;
    margin: 0 20px;
    cursor: pointer;
    position: relative;
}
nav ul li a {
    text-decoration: none;
    color: black;
}

nav ul li:after {
    content: '';
    position: absolute;
    width: 0;
    height: 3px;
    background: blue;
    bottom: -5px;
    left: 0;
    transition: width 0.3s ease;
}

nav ul li:hover:after {
    width: 100%;
}

.menu-icon {
    display: none;
}

@media only screen and (max-width: 600px) {
    nav {
        padding: 5px 10px;
    }
    .menu-icon {
        display: block;
        font-size: 2rem;
    }
    nav ul {
        display: none;
    }
}

